--- a/netrender/css/master.css
+++ b/netrender/css/master.css
@@ -15,12 +15,26 @@ th[data-field='actions'] {
     min-width: 88px;
 }
 
-td {
-    white-space: nowrap;
+.no-wrap {
+    display: flex;
+}
+
+.spinner-right {
+    padding-left: 5px;
+    margin-top: -3px;
+    float: right;
+}
+
+.spinner-right > .btn, .btn-xxs {
+    padding: 0px 5px;
+    font-size: 8px;
+    line-height: 1.5;
+    border-radius: 2px;
 }
 
 span.sort {
      display: none;
 }
+
 
 
